# bitcoinfuzz

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  ADDITIONAL.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  POC-NOTES.md  README.md  RUNNING.md  auto_build.py  auto_build.sh  bitcoinfuzz.sln  build.sbt  changes.md  compile_flags.txt  docker-compose.yml  driver.cpp  driver.h  flake.nix  fuzz-targets.json  jar_contents.txt  justfile  lsan.supp  main.cpp  rename_cgo_symbols.sh  requirements.txt  run_orchestrator.sh  run_tests.sh  wget-log
.github/scripts/: run-fuzz.sh  select-cxxflags.sh
.github/workflows/: commit-by-commit-build.yml  docker-image-check.yml  format-check.yml  msan.yml  nix.yml  test.yml  ubsan.yml  workflow.yml
custommutator/: .gitignore  Makefile
custommutator/mutators/: bolt11.h  bolt12_offer.h  customcrossover.cpp  customcrossover.h  extended_key.h  onion.h  p2p_lightning_message.h  p2p_message.h  schnorr_signature.h  secp256k1_signature.h
custommutator/tests/: test_extended_key.cpp  test_extended_key_main.cpp  test_onion_main.cpp  testextendedkey.cpp
custommutator/utils/: base58.cpp  base58.h  bech32.cpp  bech32.h
docs/: module-matrix.md
helpers/: jvmloader.cpp  jvmloader.h
include/bitcoinfuzz/: basemodule.cpp  basemodule.h  module_defs.h  module_loader.h  module_registry.h  modulelogger.cpp  modulelogger.h
infra/: Dockerfile.orchestrator  docker-compose.infra.yml
infra/alertmanager/: alertmanager.yml
infra/prometheus/: alerts.yml  prometheus.yml
metrics_agent/: __init__.py  agent.py  collector.py  discovery.py  parser.py  watcher.py
modules/bitcoin/: CMakeLists.txt  Makefile  README.md  addrdb.cpp  addrdb.h  addresstype.cpp  addrman.cpp  addrman.h  addrman_impl.h  banman.cpp  banman.h  bip324.cpp  bip324.h  bitcoin-build-config.h  bitcoin-build-info.h  blockencodings.cpp  blockencodings.h  chain.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  core_memusage.h  core_write.cpp  dbwrapper.cpp  dbwrapper.h  flatfile.cpp  flatfile.h  i2p.cpp  i2p.h  logging.cpp  module.cpp  module.h  musig.cpp  musig.h  net.cpp  net.h  net_permissions.cpp  net_permissions.h  net_processing.h  (+29 more)
modules/bitcoin/common/: args.cpp  args.h  bloom.cpp  bloom.h  messages.cpp  messages.h  netif.cpp  netif.h  settings.cpp  settings.h  system.cpp  system.h
modules/bitcoin/consensus/: tx_verify.cpp  tx_verify.h
modules/bitcoin/crypto/: hex_base.cpp  poly1305.h
modules/bitcoin/index/: base.cpp  base.h  disktxpos.h  txindex.cpp  txindex.h
modules/bitcoin/kernel/: blockmanager_opts.h  chain.h  context.cpp  context.h  cs_main.cpp  cs_main.h  mempool_entry.h  mempool_limits.h  mempool_options.h  mempool_removal_reason.cpp  mempool_removal_reason.h  notifications_interface.h  warning.h
modules/bitcoin/leveldb/: CMakeLists.txt
modules/bitcoin/node/: abort.cpp  abort.h  blockstorage.cpp  blockstorage.h  connection_types.cpp  connection_types.h  context.h  database_args.cpp  database_args.h  eviction.h  interface_ui.cpp  interface_ui.h  kernel_notifications.cpp  kernel_notifications.h  protocol_version.h  transaction.cpp  transaction.h  types.h  warnings.cpp  warnings.h
modules/bitcoin/policy/: fees.cpp  fees.h  packages.cpp  packages.h  policy.cpp  settings.cpp  settings.h
modules/bitcoin/script/: descriptor.cpp  descriptor.h  interpreter.h  sigcache.cpp  sign.cpp  solver.h
modules/bitcoin/util/: asmap.cpp  asmap.h  hasher.h  signalinterrupt.cpp  signalinterrupt.h  sock.cpp  sock.h
modules/bitcoinaddrman/: Makefile  module.cpp  module.h
modules/bitcoinerlabminiscript/: Makefile  module.cpp  module.h
modules/bitcoinj/: .gitignore  Makefile  README.md  module.cpp  module.h  settings.gradle.kts
modules/bitcoinkernel/: Makefile  README.md  module.cpp  module.h
modules/bitcoinkernelvariant/: Makefile  README.md  bitcoinkernel_variant_symbol_prefix.h  module.cpp  module.h
modules/bitcoins/: .gitignore  BitcoinSWrapper.java  Makefile  README.md  gradle.properties  module.cpp  module.h  (+1 more)
modules/btcd/: CMakeLists.txt  Makefile  README.md  module.cpp  module.h
modules/btcd/btcd_wrapper/: go.mod  go.sum  libbtcd_wrapper.h  libscript.h  wrapper.go
modules/eclair/: .gitignore  Bolt11InvoiceWrapper.java  CMakeLists.txt  EclairWrapper.java  Makefile  README.md  build.bat  module.cpp  module.h
modules/floresta/floresta_lib/: Cargo.toml  floresta_lib.h
modules/floresta/floresta_lib/src/: lib.rs
modules/ldk/: CMakeLists.txt  Makefile  README.md  module.cpp  module.h
modules/ldk/.cargo/: config.toml
modules/ldk/ldk_lib/: Cargo.toml  ldk_lib.h
modules/ldk/ldk_lib/.cargo/: config.toml
modules/ldk/ldk_lib/src/: lib.rs
modules/lnd/: CMakeLists.txt  Makefile  README.md  module.cpp  module.h
modules/lnd/lnd_wrapper/: go.mod  go.sum  liblnd_wrapper.h  libscript.h  wrapper.go
modules/rust/: Cargo.toml  Makefile  module.cpp  module.h  rust_modules_lib.h
modules/rust/src/: lib.rs
modules/rustbitcoin/: CMakeLists.txt  Makefile  README.md  module.cpp  module.h
modules/rustbitcoin/rust_bitcoin_lib/: Cargo.toml  rust_bitcoin_lib.h
modules/rustbitcoin/rust_bitcoin_lib/src/: lib.rs
modules/rustk256/k256_lib/: Cargo.toml  k256_lib.h
modules/rustk256/k256_lib/src/: lib.rs
modules/rustminiscript/: CMakeLists.txt  Makefile  README.md  module.cpp  module.h
modules/rustminiscript/rust_miniscript_lib/: Cargo.toml  rust_miniscript_lib.h
modules/rustminiscript/rust_miniscript_lib/src/: lib.rs
modules/rustmusig2/musig2_lib/: Cargo.toml  musig2_lib.h
modules/rustmusig2/musig2_lib/src/: lib.rs
orchestrator/: README.md  __init__.py  __main__.py  app.py  campaign_manager.py  config.py  crash_watcher.py  database.py  docker_manager.py  models.py  scheduled_campaigns.py  scheduler.py  targets.py
scripts/: build-all.sh  generate_rust_workspace_manifest.py  generate_targets.py  validate_targets.py
tests/: test_api.py  test_crash_watcher.py  test_database.py  test_docker_manager.py  test_listtargets.py  test_models.py  test_parser.py  test_scheduler.py  test_targets.py
tools/: listtargets.py
(+203 files in other folders)
