[lib]
name = "floresta_lib"
crate-type = ["staticlib"]

[package]
name = "floresta_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
floresta-wire = { git = "https://github.com/vinteumorg/Floresta.git", branch = "master" }
floresta-common = { git = "https://github.com/vinteumorg/Floresta.git", branch = "master" }
bitcoin = { version = "0.32.5", features = ["std"] }
