[lib]
name = "rust_bitcoin_lib"
crate-type = ["staticlib"]

[package]
name = "rust_bitcoin_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin.git", rev = "fc63c9cd53bc6e6ed5ad8e6ad02232c495f971dd" }
p2p = { git = "https://github.com/rust-bitcoin/rust-bitcoin.git", rev = "fc63c9cd53bc6e6ed5ad8e6ad02232c495f971dd", package = "bitcoin-p2p-messages" }
