[lib]
name = "rust_bitcoin_lib"
crate-type = ["staticlib"]

[package]
name = "rust_bitcoin_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin.git", rev = "aeadac41b45a170beddbdbea8ada3d1621f09e7c" }
p2p = { git = "https://github.com/rust-bitcoin/rust-bitcoin.git", rev = "aeadac41b45a170beddbdbea8ada3d1621f09e7c", package = "bitcoin-p2p-messages" }
