[lib]
name = "k256_lib"
crate-type = ["staticlib"]

[package]
name = "k256_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
k256 = { git = "https://github.com/RustCrypto/elliptic-curves.git", rev = "a4af4fa03caaa135bac7ca04fd8b0d00e1c87592", package = "k256", features=["sha2"]}
