[lib]
name = "rust_miniscript_lib"
crate-type = ["staticlib"]

[package]
name = "rust_miniscript_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
miniscript = { git = "https://github.com/rust-bitcoin/rust-miniscript.git", rev = "9b6b9d4bfc17a8036ffed1300163f63eb3d70dfd" }
# miniscript = { version = "12.3.0", features = ["std", "compiler"] }
