[lib]
name = "rust_miniscript_lib"
crate-type = ["staticlib"]

[package]
name = "rust_miniscript_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
miniscript = { git = "https://github.com/rust-bitcoin/rust-miniscript.git", rev = "04f1c58b463d24931924cada03a485f8b2547435" }
# miniscript = { version = "12.3.0", features = ["std", "compiler"] }
