[lib]
name = "musig2_lib"
crate-type = ["staticlib"]

[package]
name = "musig2_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
musig2 = { git = "https://github.com/conduition/musig2", rev = "ba701af018ac9ed971551ed0e3475b42fdfd62dc", features = ["secp256k1"] }
secp256k1 = "0.31"
